--- a/config/database.yml
+++ b/config/database.yml
@@ -11,10 +11,11 @@ test: &test
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql2
+  encoding: utf8
+  database: chattin_presentations
+  username: root
+  password: iloverandompasswordsbutthiswilldo
 
 cucumber:
   <<: *test
